[gd_scene load_steps=2 format=3 uid="uid://dtg00lp7w7mub"]

[ext_resource type="Script" path="res://FacilityPopup.gd" id="1_popup"]

[node name="FacilityPopup" type="Control"]
custom_minimum_size = Vector2(250, 150)
script = ExtResource("1_popup")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.25, 0.25, 0.35, 0.95)

[node name="Border" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.6, 0.6, 0.7, 1)
mouse_filter = 2

[node name="BorderInner" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_left = 0.008
anchor_top = 0.008
anchor_right = 0.992
anchor_bottom = 0.992
color = Color(0.25, 0.25, 0.35, 0.95)
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0

[node name="Header" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="VBoxContainer/Header"]
layout_mode = 2
size_flags_horizontal = 3
text = "Facility Info"
horizontal_alignment = 1

[node name="CloseButton" type="Button" parent="VBoxContainer/Header"]
layout_mode = 2
text = "X"
custom_minimum_size = Vector2(20, 20)

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="Content" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="FacilityName" type="Label" parent="VBoxContainer/Content"]
layout_mode = 2
text = "Facility: "

[node name="PlanetName" type="Label" parent="VBoxContainer/Content"]
layout_mode = 2
text = "Planet: "